[gd_scene load_steps=21 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo/fundo.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Felpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=8]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/somVoa.ogg" type="AudioStream" id=10]
[ext_resource path="res://Cenas/Cano.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/GeradorCanos.gd" type="Script" id=12]
[ext_resource path="res://assets/fonte160.fnt" type="BitmapFont" id=13]
[ext_resource path="res://assets/sounds/somHit.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/somScore.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]

resource/name = "backAnim"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationFundo/Sprite1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationFundo/Sprite2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( -70.9343, 4.74442 )
b = Vector2( 1078.83, 3.17853 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( -8.45823, -2.36487 )
b = Vector2( 7.53308, -1.578 )

[node name="GameNode" type="Node2D"]

z/z = 1
script/script = ExtResource( 1 )

[node name="AnimationFundo" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/backAnim = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "backAnim"

[node name="Sprite1" type="Sprite" parent="AnimationFundo"]

transform/pos = Vector2( -1026, 0 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="AnimationFundo"]

transform/pos = Vector2( -2.51758, -5.03503 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Felpudo" type="RigidBody2D" parent="."]

transform/pos = Vector2( 339.809, 462.76 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( -10.5945, 0, 0, -7.68333, 5.28714, -1.10112 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 10.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="FelpudoAnim" type="AnimatedSprite" parent="Felpudo"]

transform/pos = Vector2( -3.71722, 13.9245 )
transform/scale = Vector2( 1.4, 1.4 )
frames = SubResource( 3 )
animation = "default"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Felpudo"]

transform/pos = Vector2( 5.28714, -1.10112 )
transform/scale = Vector2( -10.5945, -7.68333 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="somVoar" type="StreamPlayer" parent="Felpudo"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Limites" type="StaticBody2D" parent="."]

editor/display_folded = true
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 4.49194, -27.5867 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 72.5914, 0, 0, 3.54975, 544.067, 1822.66 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites"]

transform/pos = Vector2( 4.49194, -27.5867 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Limites"]

transform/pos = Vector2( 544.067, 1822.66 )
transform/scale = Vector2( 72.5914, 3.54975 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="GeradorCanos" type="Node2D" parent="."]

editor/display_folded = true
z/z = 1

[node name="Cano" parent="GeradorCanos" instance=ExtResource( 11 )]

transform/pos = Vector2( 968.332, 859.813 )

[node name="Gerador" type="Position2D" parent="GeradorCanos"]

transform/pos = Vector2( 1228.92, 822.36 )
script/script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="GeradorCanos/Gerador"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="tempoRejogar" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="DadosGame" type="Node2D" parent="."]

editor/display_folded = true
z/z = 3

[node name="Controle" type="Control" parent="DadosGame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Pontuacao" type="Label" parent="DadosGame/Controle"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 17.0
margin/right = 476.0
margin/bottom = 190.0
custom_fonts/font = ExtResource( 13 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="somMorte" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="somPonto" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="GeradorCanos/Gerador/Timer" to="GeradorCanos/Gerador" method="_on_Timer_timeout"]

[connection signal="timeout" from="tempoRejogar" to="." method="_on_tempoRejogar_timeout"]


